--- a/docs/formulation.tex
+++ b/docs/formulation.tex
@@ -193,7 +193,7 @@ where $a_{i,\ell}$ and $a_{i,r}$ are the radii of at the left and right end of t
 %-------------------------------------------------------------------------------
 \subsubsection{Putting it all together}
 %-------------------------------------------------------------------------------
-By substituting the volume averaging of the temporal derivative in~\eq{eq:dvdt} approximations for the flux over the surfaces in~\eq{eq:q_ij} and~\eq{eq:cv_volume} respectively into the conservation equation~\eq{eq:cable_balance} we get the following ODE defined for each node in the cell
+By substituting the volume averaging of the temporal derivative in~\eq{eq:dvdt} approximations for the flux over the surfaces in~\eq{eq:J_ij} and~\eq{eq:cv_volume} respectively into the conservation equation~\eq{eq:cable_balance} we get the following ODE defined for each node in the cell
 \begin{equation}
     \sigma_i c_m \dder{V_i}{t}
        = -\sum_{j\in\mathcal{N}_i} {\frac{\sigma_{i,j}}{r_L \Delta x_{i,j}} (V_i-V_j)} - \sigma_i\cdot(i_m(V_i) - i_e(x_i)),
@@ -228,17 +228,24 @@ The current $i_m$ is often a nonlinear function of voltage, so if it was formula
 
 The equations can be rearranged to have all unknown voltage values on the lhs, and values that can be calculated directly on the rhs:
 \begin{align}
-      & V_i^{k+1} + \sum_{j\in\mathcal{N}_i} {\frac{\alpha_{ij}}{\sigma_i} (V_i^{k+1}-V_j^{k+1})}
+      & \sigma_i V_i^{k+1} + \sum_{j\in\mathcal{N}_i} {\Delta t \alpha_{ij} (V_i^{k+1}-V_j^{k+1})}
             \nonumber \\
-    = & V_i^k - \frac{\Delta t}{c_m}(i_m^{k} - i_e),
+    = & \sigma_i \left( V_i^k - \frac{\Delta t}{c_m}(i_m^{k} - i_e) \right),
     \label{eq:ode_linsys}
 \end{align}
 where the value
 \begin{equation}
-    \alpha_{ij} = \alpha_{ji} = \frac{\Delta t \sigma_{ij}}{ c_m r_L \Delta x_{ij}}
+    \alpha_{ij} = \alpha_{ji} = \frac{\sigma_{ij}}{ c_m r_L \Delta x_{ij}}
     \label{eq:alpha_linsys}
 \end{equation}
 is a constant that can be computed for each interface between adjacent compartments during set up.
+
+The left hand side of \eq{eq:ode_linsys} can be rearranged
+\begin{equation}
+    \left[ \sigma_i + \sum_{j\in\mathcal{N}_i} {\Delta t \alpha_{ij}} \right] V_i^{k+1}
+    - \sum_{j\in\mathcal{N}_i} { \Delta t \alpha_{ij} V_j^{k+1}},
+\end{equation}
+which gives the coefficients for the linear system.
 
 %-------------------------------------------------------------------------------
 \subsubsection{Example: unbranched uniform cable}
@@ -247,18 +254,22 @@ For an unrbanched uniform cable of constant radius $a$, with length $L$ and $n$ 
 \begin{align}
     \Delta x_{ij} &= \Delta x = \frac{L}{n-1}, \nonumber \\
     \sigma_{ij}   &= \pi a^2, \nonumber \\
-    \sigma_{i}    &= 2 \pi a \Delta x, \nonumber \\
-    \alpha_{ij}   &= \frac{\pi a^2\Delta t}{c_m r_L\Delta x}, \nonumber \\
-    \frac{\alpha_{ij}}{\sigma_i}
-                  &= \frac{a\Delta t}{2c_m r_L\Delta x^2}. \nonumber
+    \sigma_{i}    &= \sigma_s = 2 \pi a \Delta x, \nonumber \\
+    \alpha_{ij}   &= \alpha = \frac{\pi a^2}{c_m r_L\Delta x}, \nonumber
 \end{align}
-With these simplifications, the lhs of the linear system is
+With these simplifications, the LHS of the linear system is
 \begin{align}
-    & V_i^{k+1} + \beta (V_i^{k+1}-V_{i+1}^{k+1}) + \beta (V_i^{k+1}-V_{i-1}^{k+1})
-            \nonumber \\
-            = & (1+2\beta)V_i^{k+1} - \beta V_{i+1}^{k+1} - \beta V_{i-1}^{k+1}.
+    \left[\sigma_s + 2\Delta t\alpha\right] & V_{i}^{k+1}
+    - \Delta t \alpha V_{i+1}^{k+1}
+    - \Delta t \alpha V_{i-1}^{k+1}
+        \nonumber \\
+    \left[\sigma_s/2 + \Delta t\alpha\right] & V_{1}^{k+1}
+    - \Delta t \alpha V_{2}^{k+1}
+        \nonumber \\
+    \left[\sigma_s/2 + \Delta t\alpha\right] & V_{n}^{k+1}
+    - \Delta t \alpha V_{n-1}^{k+1}
+        \nonumber
 \end{align}
-where $\beta=\frac{a\Delta t}{2c_m r_L\Delta x^2}$.
 
 The end points of the cable, i.e. the compartments for $x_1$ and $x_n$, have to be handled differently.
 If we assume that a no-flux boundary condition, i.e. $\vv{J}\cdot\vv{n}=0$, is imposed at the end of the cable, the lhs of the linear system are
