add description of units and scaling in FVM discretization

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -72,6 +72,9 @@
 \newcommand{\dder}[2]{\frac{\deriv{#1}}{\deriv{#2}}}
 \newcommand{\vv}[1]{\bm{#1}\xspace}
 
+\newcommand{\unit}[1]{\left[{#1}\right]}
+\newcommand{\txtunit}[1]{$\left[{#1}\right]$}
+
 %----------------------------------------------------------------------------------------
 %   ARTICLE INFORMATION
 %----------------------------------------------------------------------------------------
