Fix small math omission.
Left out a factor of λ in equation 4.

--- a/docs/passive_cable/cable_computation.tex
+++ b/docs/passive_cable/cable_computation.tex
@@ -114,7 +114,7 @@ to a normalized version of the cable equation,
 \end{subequations}
 by
 \begin{equation}
-    v(x, t)= E - Ir \cdot g(\frac{x}{\lambda}, \frac{t}{\tau};  \frac{L}{\lambda}).
+    v(x, t)= E - Ir\lambda \cdot g(\frac{x}{\lambda}, \frac{t}{\tau};  \frac{L}{\lambda}).
 \end{equation}
 
 \section{Solution to the normalized cable equation}
