--- a/docs/model/report.tex
+++ b/docs/model/report.tex
@@ -71,6 +71,7 @@
 \newcommand{\pder}[2]{\frac{\partial{#1}}{\partial{#2}}}
 \newcommand{\dder}[2]{\frac{\deriv{#1}}{\deriv{#2}}}
 \newcommand{\vv}[1]{\bm{#1}\xspace}
+\newcommand{\cmi}{c_{m,i}}
 
 \newcommand{\unit}[1]{\left[{#1}\right]}
 \newcommand{\txtunit}[1]{$\left[{#1}\right]$}
