--- a/docs/model/images/cable.tex
+++ b/docs/model/images/cable.tex
@@ -29,6 +29,10 @@
 %\draw [pil, very thin] (-3.4,0) -- ( 3.5, 0);
 %\draw [pil, very thin] (-3.2,-0.2) -- (-3.2, 0.5);
 
+% left sub CV
+\filldraw[white,fill=green!20] (-2,-0.5) -- (-2,0.5) -- (0,0.65) -- (0,-0.65) -- cycle;
+\filldraw[white,fill=blue!20] (0,-0.65) -- (0,0.65) -- ( 2, 0.8) -- ( 2, -0.8) -- cycle;
+
 % left volume
 \draw [white!60!black] (-6,-0.5) -- (-6, 0.5);
 \draw [white!60!black] (-6,-0.5) -- (-2,-0.5);
@@ -74,6 +78,8 @@
 \node [] at ( 2.5, 1.15) {$\Gamma_{{i,i+1}}$};
 \node [] at (  -1, 1.15) {$\Gamma_{{e}}$};
 \node [] at ( 1.7, -1.2) {$\Omega$};
+\node [] at ( -1, 0) {\textcolor{green!50!black}{$\Omega_{i-1}^j$}};
+\node [] at (  1, 0) {\textcolor{blue}{$\Omega_{i+1}^j$}};
 
 \end{tikzpicture}
 \end{document}
