--- a/docs/model/symbols.tex
+++ b/docs/model/symbols.tex
@@ -2,18 +2,22 @@
 %\subsubsection{Balancing Units}
 %-------------------------------------------------------------------------------
 Ensuring that units are balanced and correct requires care.
-Take the description of the nonlinear system of ODEs that arises from the finite volume discretisation
+Take the system of linear equations that arises from the finite volume discretisation, specified in \eq{eq:ode_linsys} and \eq{eq:rhs_linsys}
 \begin{equation}
     \label{eq:linsys_FV}
-      V_i^{k+1} + \sum_{j\in\mathcal{N}_i} {\frac{\Delta t \alpha_{ij}}{\sigma_i} (V_i^{k+1}-V_j^{k+1})}
-    = V_i^k - \frac{\Delta t}{c_m}(i_m^{k} - i_e).
+    \left[
+        \frac{\sigma_i \cmi}{\Delta t} + \sum_{j\in\mathcal{N}_i} {\alpha_{ij}}
+    \right]
+    V_i^{k+1} - \sum_{j\in\mathcal{N}_i} { \alpha_{ij} V_j^{k+1}}
+        =
+    \frac{\sigma_i \cmi}{\Delta t} V_i^k -  \sigma_i(i_m^{k} - i_e).
 \end{equation}
+
 The choice of units for a parameter, e.g. $\mu m^2$ or $m^2$ for the area $\sigma_{ij}$, introduces a constant of proportionality wherever it is used ($10^{-12}$ in the case of $\mu m^2 \rightarrow m^2$).
 Wherever terms are added in \eq{eq:linsys_FV} the units must be checked, and constants of proportionality balanced.
 
 First, appropriate units for each of the parameters and variables are chosen in~\tbl{tbl:units}.
 We try to use the same units as NEURON, except for the specific membrane capacitance $c_m$, for which $F\cdot m^{-2}$ is used in place of $nF\cdot mm^{-2}$.
-In \eq{eq:linsys_FV} we choose units of $mV \equiv 10^{-3}V$ for each term because of the $V_i$ terms on either side of the equation.
 
 \begin{table}[hp!]
 \begin{tabular}{lllr}
@@ -35,85 +39,129 @@ In \eq{eq:linsys_FV} we choose units of $mV \equiv 10^{-3}V$ for each term becau
 \label{tbl:units}
 \end{table}
 
-%------------------------------------------
-\subsubsection{current terms}
-%------------------------------------------
-Membrane current is calculated as follows $i_m = \overline{g}(E-V)$, with units
+\subsection{Left Hand Side}
+First, we calculate the units for the term $\frac{\sigma_i \cmi}{\Delta t}$, as follows
 \begin{align}
-    \unit{ i_m } &=  \unit{ \overline{g} } \unit{ V } \nonumber \\
-                       &=  10^{4} \cdot A\cdot V^{-1}\cdot m^{-2} \cdot 10^{-3} \cdot V \nonumber \\
-                       &=  10 \cdot A \cdot m^{-2}. \label{eq:im_unit}
+    \left[ \frac{\sigma_i \cmi}{\Delta t} \right]
+        &=
+    \frac{10^{-12}\cdot m^2 \cdot s\cdot A\cdot V^{-1}\cdot m^{-2} } {10^{-3}\cdot s}
+            \nonumber \\
+        &=
+    10^{-9} \cdot A \cdot V^{-1}. \label{eq:units_lhs_diag}
 \end{align}
-The point process currents are calculated as point sources which must be turned into current densities as follows $i_m = g_s(E-V)/\sigma_i$.
-The units for the synaptic conductance $g_s$ are $\mu S$, so the units are calculated as follows
+The units of $\alpha_{i,j}$ are:
 \begin{align}
-    \unit{ i_m } &=  \unit{ g_s } \unit{ V } \unit{\sigma_i}^-1 \nonumber \\
-                 &=  10^{-6} \cdot A\cdot V^{-1} \cdot 10^{-3} \cdot 10^{12} \cdot m^{-2} \nonumber \\
-                 &=  10^{3} \cdot A \cdot m^{-2}, \label{eq:ims_unit}
+    \left[ \alpha_{i,j} \right]
+        &=
+    \left[ \frac{\sigma_{ij}}{ r_L \Delta x_{ij}} \right] \nonumber \\
+        &=
+    \frac{10^{-12}\cdot m^2}{ 10^{-2} \cdot A^{-1}\cdot V\cdot m \cdot 10^{-6}\cdot m}
+        \nonumber \\
+        &=
+    10^{-4}\cdot A \cdot V^{-1}, \label{eq:units_lhs_lu}
 \end{align}
-which must be scaled by $10^{2}$ to match that of of the density channels in \eq{eq:im_unit}.
+which can be scaled by $10^{5}$ to have the same scale as in \eq{eq:units_lhs_diag}.
 
-
-The injected current $I_e$ has units $nA$, which has to be expressed in terms of current per unit area $i_e=I_e / \sigma_i$ with units
-\begin{align}
-    \unit{ i_e } &=  \unit{ I_e } \unit{ \sigma_i }^{-1} \nonumber \\
-                       &=  10^{-9}\cdot A \cdot 10^{12} \cdot m^{-2} \nonumber \\
-                       &=  10^{3} \cdot A \cdot m ^{-2}, \label{eq:ie_unit}
-\end{align}
-which must be scaled by $10^2$ to match $i_m$ in \eq{eq:im_unit}.
-
-The units for the flux coefficent can be calculated as follows:
-\begin{align}
-    \unit{ \frac{\Delta t}{c_m} } &= 10^{-3} \cdot s \cdot s^{-1}\cdot A^{-1}\cdot V\cdot m^2 \nonumber \\
-                                  &= 10^{-3} \cdot A^{-1} \cdot V\cdot m^2. \label{eq:dtcm_unit}
-\end{align}
-From \eq{eq:im_unit} and \eq{eq:dtcm_unit} that the units of the full current term are
-\begin{align}
-    \unit{ \frac{\Delta t}{c_m}\left(i_m - i_e\right) }
-        &= 10^{-3} \cdot A^{-1} \cdot V\cdot m^2 \cdot 10 \cdot A \cdot m^{-2} \nonumber \\
-        &= 10^{-2} \cdot V,
-\end{align}
-which must be scaled by $10$ to match the units of $mV\equiv10^{-3}V$.
-%------------------------------------------
-\subsubsection{flux terms}
-%------------------------------------------
-The coefficients in the linear system have the units
+Thus, the RHS with scaling for units is:
 \begin{equation}
-    \unit{ \frac{\Delta t\alpha_{ij}}{\sigma_i} }
-    =
-    \unit{ \frac{\Delta t \sigma_{ij} } {c_m r_L \Delta x_{ij} \sigma_i} }
-    =
-    \unit{ \frac{\Delta t } {c_m r_L \Delta x_{ij} } },
+    \label{eq:linsys_LHS_scaled}
+    \left[
+        \frac{\sigma_i \cmi}{\Delta t} + \sum_{j\in\mathcal{N}_i} {10^5\cdot\alpha_{ij}}
+    \right]
+    V_i^{k+1} - \sum_{j\in\mathcal{N}_i} { 10^5\cdot\alpha_{ij} V_j^{k+1}}.
 \end{equation}
-where we we simplify by noting that $\unit{\sigma_{ij}}=\unit{\sigma_i}$.
-The units of the term $c_m r_L$ on the denominator are calculated as follows
+The implementation folds the $10^5$ factor into the $\alpha_{ij}$ terms when they are used to calculate the invariant component of the matrix during the initialization phase.
+
+After this scaling, the units of the LHS are
 \begin{align}
-    \unit{c_m r_L}
-    &= s \cdot A \cdot V^{-1} \cdot m^{-2} \cdot 10^{-2} \cdot A^{-1} \cdot V \cdot m \nonumber \\
-    &= 10^{-2} \cdot s \cdot m^{-1},
-\end{align}
-so the units of the denominator are
-\begin{align}
-    \unit{c_m r_L \Delta x_{ij}}
-    &= 10^{-2} \cdot s \cdot m^{-1} \cdot 10^{-6} \cdot m \nonumber \\
-    &= 10^{-8} \cdot s,
-\end{align}
-and hence
-\begin{align}
-    \unit{\frac{\Delta t } {c_m r_L \Delta x_{ij} }}
-    &= 10^{8} \cdot s^{-1} \cdot 10^{-3} \cdot s \nonumber \\
-    &= 10^{5}.
+    \text{units on LHS}
+        &= (10^{-9} \cdot A \cdot V^{-1})( 10^{-3} \cdot V) \nonumber \\
+        &= 10^{-12} \cdot A. \label{eq:balanced_units}
 \end{align}
 
-So, the terms with $\alpha_{ij}$ must be scaled by $10^5$ to match the units of $mV$.
-%------------------------------------------
-\subsubsection{discretization with scaling}
-%------------------------------------------
-Here is something that I wish the NEURON documentation had provided:
+\subsection{Right Hand Side}
+The first term on the RHS has the same scaling factor as the LHS, so does not need to be changed.
+
+Density channels and point processes describe the membrane current differently in NMODL;
+as current densities ($10\cdot A\cdot m^{-2}$) and currents ($10^{-9}\cdot A$) respectively.
+The current term can be written as follows:
+\begin{equation}
+    \sigma_i (i_m - i_e) \equiv \sigma_i \bar{i}_m + I_m - I_e,
+\end{equation}
+where $\bar{i}_m$ is the current density contribution from ion channels, $I_m$ is the current contribution from synapses, and $I_e$ is current contribution from electrodes.
+
+The units of the current density as calculated via NMODL are
+\begin{equation}
+    \label{eq:im_unit}
+    \unit{ \bar{i}_m } =  \unit{ \overline{g} } \unit{ V }
+                       =  10 \cdot A \cdot m^{-2},
+\end{equation}
+so the units of the current from density channels are
+\begin{equation}
+    \unit{\sigma_i \bar{i}_m} = 10^{-12}\cdot{m}^2 \cdot 10 \cdot A \cdot m^{-2} = 10^{-11}\cdot A.
+\end{equation}
+Hence, the $\sigma_i \bar{i}_m$ term must be scaled by 10 to match units.
+
+Likewise the units of synapse and electrode current
+\begin{equation}
+    \label{eq:Im_unit}
+    \unit{ I_e } = \unit{ I_m } = \unit{ g_s } \unit{ V }
+                 = 10^{-9}\cdot A,
+\end{equation}
+which must be scaled by $10^3$ to match units.
+
+The properly scaled RHS is
+\begin{equation}
+    \label{eq:linsys_RHS_scaled}
+    \frac{\sigma_i \cmi}{\Delta t} V_i^k -
+        (10\cdot\sigma_i \bar{i}_m + 10^3(I_m - I_e)).
+\end{equation}
+
+\subsection{Putting It Together}
+Hey ho, let's go: from \eq{eq:linsys_LHS_scaled} and \eq{eq:linsys_RHS_scaled} the full scaled linear system is
 \begin{align}
-&     V_i^{k+1} + \sum_{j\in\mathcal{N}_i} {10^5 \cdot \frac{\Delta t \alpha_{ij}}{\sigma_i} (V_i^{k+1}-V_j^{k+1})} \nonumber \\
-&   = V_i^k - 10\cdot \frac{\Delta t}{c_m}(i_m^{k} - 10^2\cdot I_e/\sigma_i).
+    &
+    \left[
+        \frac{\sigma_i \cmi}{\Delta t} + \sum_{j\in\mathcal{N}_i} {10^5\cdot\alpha_{ij}}
+    \right]
+    V_i^{k+1} - \sum_{j\in\mathcal{N}_i} { 10^5\cdot\alpha_{ij} V_j^{k+1}} \nonumber \\
+       & =
+    \frac{\sigma_i \cmi}{\Delta t} V_i^k -
+        (10\cdot\sigma_i \bar{i}_m + 10^3(I_m - I_e)).
 \end{align}
+This can be expressed more generally in terms of weights
+\begin{align}
+    &
+    \left[
+        g_i + \sum_{j\in\mathcal{N}_i} {g_{ij}}
+    \right]
+    V_i^{k+1} - \sum_{j\in\mathcal{N}_i} { g_{ij} V_j^{k+1}} \nonumber \\
+       & =
+    g_i V_i^k -
+        (w_i^d \bar{i}_m + w_i^p(I_m - I_e)),
+\end{align}
+which can be expressed more compactly as
+\begin{equation}
+    Gv=i,
+\end{equation}
+where $G\in\mathbb{R}^{n\times n}$ is the conductance matrix, and $v, i \in \mathbb{R}^{n}$ are voltage and current vectors respectively.
+
+In NestMC the weights are chosen such that the conductance has units $\mu S$, voltage has units $mV$ and current has units $nA$.
+
+    \begin{center}
+
+    \begin{tabular}{llll}
+        \hline
+        weight & value & units  & SI \\
+        \hline
+        $g_i$    & $10^{-3}\frac{\sigma_i \cmi}{\Delta t}$ & $\mu S$ & $10^{-6} \cdot A\cdot V^{-1}$ \\
+        $g_{ij}$ & $10^2\alpha_{ij}$                       & $\mu S$ & $10^{-6} \cdot A\cdot V^{-1}$ \\
+        $w_i^d$  & $10^{-2}\cdot\sigma_i$                  & $10^2\mu m^{-2}$ & $10^{-10}m^2$ \\
+        $w_i^p$  & $1$                                     & $1$     & $1$ \\
+        \hline
+    \end{tabular}
+
+    \end{center}
 %------------------------------------------
 \subsection{Supplementary Unit Information}
 %------------------------------------------
